--- a/main.html
+++ b/main.html
@@ -8,6 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="hero">
+		<div class="img1"> <img class="actimg" src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" >
+		</div>
+		<div class="para">
+			<h1>Welcome to my Pinterest clone</h1>
+			<p>Discover new inspiration and save your favourite ideas</p>
+			<button>Explore Now</button>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
